--- a/src/pages/AllItemsPage/AllItemsPage.css
+++ b/src/pages/AllItemsPage/AllItemsPage.css
@@ -1,6 +1,15 @@
-.AllItemsPage-grid {
-  width: 80%;
+/* .AllItemsPage-grid {
+  width: 50%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   grid-gap: 20px;
+} */
+
+
+
+
+.title{
+  text-align: center;
+  color: rgb(58, 73, 83)
 }
+
